Fix text overflow in project title
Project name overflow fixed with word-wrap.
Add new font to the page's text

--- a/src/style/navigation.css
+++ b/src/style/navigation.css
@@ -98,6 +98,7 @@ nav
 #Home > div > h3
 {
 	font-weight: normal;
+	font-size: 20px;
 }
 
 #Home > div:hover
