--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,3 +1,8 @@
+*
+{
+	font-family: 'Maven Pro', sans-serif;
+}
+
 body
 {
 	margin: 0;
